// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar matches pure component snapshot 1`] = `
<navbar>
  <Menu
    attached="top"
  >
    <Container>
      <MenuItem>
        <Header>
          Teebox.io
        </Header>
      </MenuItem>
      <MenuMenu
        position="right"
      >
        <MenuItem>
          <LoginModal
            trigger={
              <Button
                as="button"
                color="teal"
              >
                Login
              </Button>
            }
          />
        </MenuItem>
      </MenuMenu>
    </Container>
  </Menu>
</navbar>
`;

exports[`Navbar matches pure component when currentUser is present snapshot 1`] = `
<navbar>
  <Menu
    attached="top"
  >
    <Container>
      <MenuItem>
        <Header>
          Teebox.io
        </Header>
      </MenuItem>
      <MenuMenu
        position="right"
      >
        <MenuItem>
          Logged in as 
          name
        </MenuItem>
      </MenuMenu>
    </Container>
  </Menu>
</navbar>
`;
